--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -35,10 +35,10 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ matrix.service }} # matrix에서 서비스 이름을 가져옵니다.
+          ECR_REPOSITORY: ${{ matrix.service.ecr_repo }}
           IMAGE_TAG: ${{ github.sha }}
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG ./${{ matrix.service }}
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./${{ matrix.service.name }}/Dockerfile ./${{ matrix.service.name }}
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG 
 
   update-manifest:
