--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -2,20 +2,28 @@ name: Forwarding Assist CI/CD
 
 on:
   push:
-    branches: [ main ] # main 브랜치에 코드가 푸시될 때 실행됩니다.
-  workflow_dispatch: # 수동으로 실행할 수도 있게 합니다.
+    branches: [ main ]
+  workflow_dispatch:
 
 jobs:
   build-and-push-to-ecr:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-    
     strategy:
       matrix:
-        service: [document-generator-service, regulation-service, error-check-service, regulation-frontend]
+        service:
+          - name: document-generator-service
+            ecr_repo: document-generator
+          - name: regulation-service
+            ecr_repo: regulation-service
+          - name: error-check-service
+            ecr_repo: error-check-service
+          - name: regulation-frontend
+            ecr_repo: regulation-frontend
     outputs:
       registry: ${{ steps.login-ecr.outputs.registry }}
+      image_tag: ${{ github.sha }}
 
     steps:
       - name: Checkout repository
@@ -39,7 +47,7 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f ./${{ matrix.service.name }}/Dockerfile ./${{ matrix.service.name }}
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG 
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
   update-manifest:
     runs-on: ubuntu-latest
@@ -52,19 +60,24 @@ jobs:
           repository: sususu25/forwarding-assist-k8s-manifests
           token: ${{ secrets.MANIFEST_REPO_TOKEN }}
 
-      - name: Update image tags
+      - name: Update image tags in manifest
         run: |
-          # 각 서비스의 deployment.yaml 파일을 찾아 이미지 태그를 업데이트합니다.
-          # 이 부분은 더 정교한 방법(예: kustomize, yq)으로 개선할 수 있습니다.
-          sed -i 's|image: .*/document-generator-service:.*|image: ${{ needs.build-and-push-to-ecr.outputs.registry }}/document-generator-service:${{ github.sha }}|' document-generator-service/deployment.yaml
-          sed -i 's|image: .*/regulation-service:.*|image: ${{ needs.build-and-push-to-ecr.outputs.registry }}/regulation-service:${{ github.sha }}|' regulation-service/deployment.yaml
-          sed -i 's|image: .*/error-check-service:.*|image: ${{ needs.build-and-push-to-ecr.outputs.registry }}/error-check-service:${{ github.sha }}|' error-check-service/deployment.yaml
-          sed -i 's|image: .*/regulation-frontend:.*|image: ${{ needs.build-and-push-to-ecr.outputs.registry }}/regulation-frontend:${{ github.sha }}|' regulation-frontend/deployment.yaml
-
+          REGISTRY=${{ needs.build-and-push-to-ecr.outputs.registry }}
+          IMAGE_TAG=${{ needs.build-and-push-to-ecr.outputs.image_tag }}
+          
+          sed -i "s|image: .*/document-generator:.*|image: ${REGISTRY}/document-generator:${IMAGE_TAG}|" document-generator-service/deployment.yaml
+          sed -i "s|image: .*/regulation-service:.*|image: ${REGISTRY}/regulation-service:${IMAGE_TAG}|" regulation-service/deployment.yaml
+          sed -i "s|image: .*/error-check-service:.*|image: ${REGISTRY}/error-check-service:${IMAGE_TAG}|" error-check-service/deployment.yaml
+          sed -i "s|image: .*/regulation-frontend:.*|image: ${REGISTRY}/regulation-frontend:${IMAGE_TAG}|" regulation-frontend/deployment.yaml
+      
       - name: Commit and push changes
         run: |
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
           git add .
-          git commit -m "Update image tags to ${{ github.sha }}" || echo "No changes to commit"
-          git push 
+          if git diff-index --quiet HEAD; then
+            echo "No changes to commit."
+          else
+            git commit -m "Update image tags to ${{ needs.build-and-push-to-ecr.outputs.image_tag }}"
+            git push
+          fi 
