--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -42,6 +42,10 @@ jobs:
 
       - name: Build, tag, and push image to Amazon ECR
         uses: docker/build-push-action@v2
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: ${{ matrix.ecr-repo }}
+          IMAGE_TAG: ${{ github.sha }}
         with:
           context: ${{ matrix.service-name }}
           push: true
