--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -1,85 +1,107 @@
-name: Forwarding Assist CI/CD
+name: CI-CD Pipeline
 
 on:
   push:
-    branches: [ main ]
-  workflow_dispatch:
+    branches:
+      - main
+
+env:
+  ECR_REGISTRY: ${{ secrets.ECR_REGISTRY }}
+  AWS_REGION: ap-northeast-2
 
 jobs:
-  build-and-push-to-ecr:
+  build-and-push:
     runs-on: ubuntu-latest
     permissions:
       contents: read
-    strategy:
-      matrix:
-        service:
-          - name: document-generator-service
-            ecr_repo: document-generator
-          - name: regulation-service
-            ecr_repo: regulation-service
-          - name: error-check-service
-            ecr_repo: error-check-service
-          - name: regulation-frontend
-            ecr_repo: regulation-frontend
+      id-token: write
     outputs:
-      registry: ${{ steps.login-ecr.outputs.registry }}
-      image_tag: ${{ github.sha }}
+      tag: ${{ steps.image-tag.outputs.tag }}
 
     steps:
-      - name: Checkout repository
+      - name: Checkout
         uses: actions/checkout@v3
 
       - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
+        uses: aws-actions/configure-aws-credentials@v1
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: ap-northeast-2
+          aws-region: ${{ env.AWS_REGION }}
 
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
 
-      - name: Build, tag, and push image to Amazon ECR
+      - name: Generate image tag
+        id: image-tag
+        run: |
+          TAG=$(echo $GITHUB_SHA | cut -c1-7)
+          echo "::set-output name=tag::$TAG"
+
+      - name: Build, tag, and push image for document-generator-service
+        id: build-image-doc-gen
         uses: docker/build-push-action@v2
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: ${{ matrix.ecr-repo }}
-          IMAGE_TAG: ${{ github.sha }}
         with:
-          context: ${{ matrix.service-name }}
+          context: ./document-generator-service
           push: true
-          tags: ${{ env.ECR_REGISTRY }}/${{ env.ECR_REPOSITORY }}:${{ env.IMAGE_TAG }}
+          tags: ${{ env.ECR_REGISTRY }}/document-generator-service:${{ steps.image-tag.outputs.tag }}
+
+      - name: Build, tag, and push image for regulation-service
+        id: build-image-reg-service
+        uses: docker/build-push-action@v2
+        with:
+          context: ./regulation-service
+          push: true
+          tags: ${{ env.ECR_REGISTRY }}/regulation-service:${{ steps.image-tag.outputs.tag }}
+
+      - name: Build, tag, and push image for error-check-service
+        id: build-image-err-check
+        uses: docker/build-push-action@v2
+        with:
+          context: ./error-check-service
+          push: true
+          tags: ${{ env.ECR_REGISTRY }}/error-check-service:${{ steps.image-tag.outputs.tag }}
+
+      - name: Build, tag, and push image for regulation-frontend
+        id: build-image-reg-frontend
+        uses: docker/build-push-action@v2
+        with:
+          context: ./regulation-frontend
+          push: true
+          tags: ${{ env.ECR_REGISTRY }}/regulation-frontend:${{ steps.image-tag.outputs.tag }}
 
   update-manifest:
     runs-on: ubuntu-latest
-    needs: build-and-push-to-ecr
+    needs: build-and-push
 
     steps:
-      - name: Checkout manifest repository
+      - name: Checkout k8s-manifests repository
         uses: actions/checkout@v3
         with:
           repository: sususu25/forwarding-assist-k8s-manifests
-          token: ${{ secrets.MANIFEST_REPO_TOKEN }}
+          token: ${{ secrets.PAT_TOKEN }}
+          path: forwarding-assist-k8s-manifests
 
       - name: Update image tags in manifest
         run: |
-          REGISTRY=${{ needs.build-and-push-to-ecr.outputs.registry }}
-          IMAGE_TAG=${{ needs.build-and-push-to-ecr.outputs.image_tag }}
+          cd forwarding-assist-k8s-manifests
+          IMAGE_TAG=${{ needs.build-and-push.outputs.tag }}
           
-          sed -i "s|image: .*/document-generator:.*|image: ${REGISTRY}/document-generator:${IMAGE_TAG}|" document-generator-service/deployment.yaml
-          sed -i "s|image: .*/regulation-service:.*|image: ${REGISTRY}/regulation-service:${IMAGE_TAG}|" regulation-service/deployment.yaml
-          sed -i "s|image: .*/error-check-service:.*|image: ${REGISTRY}/error-check-service:${IMAGE_TAG}|" error-check-service/deployment.yaml
-          sed -i "s|image: .*/regulation-frontend:.*|image: ${REGISTRY}/regulation-frontend:${IMAGE_TAG}|" regulation-frontend/deployment.yaml
-      
+          sed -i "s|image: .*/document-generator-service:.*|image: ${{ env.ECR_REGISTRY }}/document-generator-service:${IMAGE_TAG}|" document-generator-service/deployment.yaml
+          sed -i "s|image: .*/regulation-service:.*|image: ${{ env.ECR_REGISTRY }}/regulation-service:${IMAGE_TAG}|" regulation-service/deployment.yaml
+          sed -i "s|image: .*/error-check-service:.*|image: ${{ env.ECR_REGISTRY }}/error-check-service:${IMAGE_TAG}|" error-check-service/deployment.yaml
+          sed -i "s|image: .*/regulation-frontend:.*|image: ${{ env.ECR_REGISTRY }}/regulation-frontend:${IMAGE_TAG}|" regulation-frontend/deployment.yaml
+
       - name: Commit and push changes
         run: |
+          cd forwarding-assist-k8s-manifests
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add .
-          if git diff-index --quiet HEAD; then
+          if [[ -z $(git status -s) ]]; then
             echo "No changes to commit."
           else
-            git commit -m "Update image tags to ${{ needs.build-and-push-to-ecr.outputs.image_tag }}"
+            git add .
+            git commit -m "Update image tags to ${{ needs.build-and-push.outputs.tag }}"
             git push
           fi
