--- a/document-generator-service/Dockerfile
+++ b/document-generator-service/Dockerfile
@@ -18,9 +18,11 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install -r requirements.txt
+# 의존성 파일 먼저 복사하여 pip 캐시 활용
+COPY requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
 
+# 나머지 소스코드 복사
 COPY . .
 
 EXPOSE 8000
