--- a/regulation-service/Dockerfile
+++ b/regulation-service/Dockerfile
@@ -2,9 +2,11 @@ FROM python:3.11-slim
 
 WORKDIR /app
 
-COPY requirements.txt .
-RUN pip install -r requirements.txt
+# 의존성 파일 먼저 복사하여 pip 캐시 활용
+COPY requirements.txt ./
+RUN pip install --no-cache-dir -r requirements.txt
 
+# 나머지 소스코드 복사
 COPY . .
 
 EXPOSE 8001
